Fix alignment

--- a/src/app/calls/list/cards.component.scss
+++ b/src/app/calls/list/cards.component.scss
@@ -8,5 +8,5 @@ mat-grid-tile {
 }
 
 .card-size {
-    font-size: 16px !important;
+    font-size: 14px !important;
 }
